[gd_scene load_steps=15 format=1]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://board.gd" type="Script" id=2]
[ext_resource path="res://Assets/White hex 2.png" type="Texture" id=3]
[ext_resource path="res://hex.tscn" type="PackedScene" id=4]
[ext_resource path="res://action.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/tree-action.png" type="Texture" id=6]
[ext_resource path="res://Assets/gold-action.png" type="Texture" id=7]
[ext_resource path="res://Assets/lake-action.png" type="Texture" id=8]
[ext_resource path="res://Assets/land-action.png" type="Texture" id=9]
[ext_resource path="res://Assets/sand-action.png" type="Texture" id=10]
[ext_resource path="res://Assets/hill-action.png" type="Texture" id=11]
[ext_resource path="res://Assets/card-action.png" type="Texture" id=12]
[ext_resource path="res://Assets/hex.png" type="Texture" id=13]
[ext_resource path="res://Assets/SizedGrave.png" type="Texture" id=14]

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="board" type="Node2D" parent="."]

script/script = ExtResource( 2 )

[node name="back" type="Sprite" parent="board"]

transform/pos = Vector2( 483.562, 250.683 )
transform/scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 3 )

[node name="hex 1" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -192.657, -250.721 )
transform/scale = Vector2( 1, 1 )
initial_state = 7
id = 0

[node name="hex 2" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -95.9045, -250.391 )
transform/scale = Vector2( 1, 1 )
initial_state = 0
id = 1

[node name="hex 3" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 0.187561, -250.391 )
transform/scale = Vector2( 1, 1 )
initial_state = 0
id = 2

[node name="hex 4" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 96.6099, -250.721 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 5" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 193.693, -250.391 )
transform/scale = Vector2( 1, 1 )
initial_state = 7

[node name="hex 6" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -240.174, -166.733 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 7" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -144.264, -167.739 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 8" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -47.8415, -166.334 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 9" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 49.234, -166.206 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 10" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 144.879, -167.056 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 11" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 241.702, -167.056 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 12" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -289.041, -82.54 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 13" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -192.323, -82.8489 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 14" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -95.5378, -83.3344 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 15" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 0.849731, -83.0034 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 16" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 97.061, -83.0916 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 17" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 193.757, -83.4669 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 18" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 289.99, -83.4448 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 19" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -337.367, 0.386871 )
transform/scale = Vector2( 1, 1 )
initial_state = 1

[node name="hex 20" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -240.797, 0.254425 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 21" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -143.692, -0.00970459 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 22" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -47.3304, 0.922058 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 23" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 48.721, 0.893433 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 24" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 144.929, 0.409729 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 25" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 241.929, 0.431183 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 26" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 337.673, 0.563202 )
transform/scale = Vector2( 1, 1 )
initial_state = 1

[node name="hex 27" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -289.711, 83.9315 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 28" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -191.828, 84.085 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 29" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -95.6658, 83.9958 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 30" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 0.100037, 83.9975 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 31" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 97.1671, 83.621 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 32" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 193.506, 84.4153 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 33" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 289.668, 83.887 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 34" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -240.691, 168.18 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 35" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -143.735, 167.739 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 36" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -47.1766, 167.496 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 37" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 48.6785, 167.475 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 38" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 145.456, 167.539 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 39" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 241.419, 167.628 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 40" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -192.379, 251.746 )
transform/scale = Vector2( 1, 1 )
initial_state = 7

[node name="hex 41" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( -95.7934, 246.945 )
transform/scale = Vector2( 1, 1 )
initial_state = 0
land = Color( 0.949219, 0.543321, 0.111237, 0.668863 )

[node name="hex 42" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 0.739624, 250.42 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 43" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 96.8143, 251.504 )
transform/scale = Vector2( 1, 1 )
initial_state = 0

[node name="hex 44" parent="board/back" instance=ExtResource( 4 )]

transform/pos = Vector2( 193.794, 251.04 )
transform/scale = Vector2( 1, 1 )
initial_state = 7
land = Color( 0.984375, 0.702413, 0.0346069, 0.57051 )

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="actionTree" parent="Control" instance=ExtResource( 5 )]

transform/pos = Vector2( 84.8705, 503.948 )
texture = ExtResource( 6 )
actionType = "tree"

[node name="actionCoin" parent="Control" instance=ExtResource( 5 )]

transform/pos = Vector2( 142.906, 408.866 )
texture = ExtResource( 7 )
actionType = "coin"

[node name="actionLake" parent="Control" instance=ExtResource( 5 )]

transform/pos = Vector2( 83.386, 441.585 )
texture = ExtResource( 8 )
actionType = "lake"

[node name="actionLand" parent="Control" instance=ExtResource( 5 )]

transform/pos = Vector2( 145.622, 471.782 )
texture = ExtResource( 9 )
actionType = "land"

[node name="actionSand" parent="Control" instance=ExtResource( 5 )]

transform/pos = Vector2( 208.599, 501.542 )
texture = ExtResource( 10 )
actionType = "sand"

[node name="actionHill" parent="Control" instance=ExtResource( 5 )]

transform/pos = Vector2( 147.295, 534.209 )
texture = ExtResource( 11 )
actionType = "hill"

[node name="actionCard" parent="Control" instance=ExtResource( 5 )]

transform/pos = Vector2( 204.846, 438.271 )
texture = ExtResource( 12 )
actionType = "card"

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 484.537, 250.238 )
transform/scale = Vector2( 5.66615, 5.04625 )
z/z = -4
texture = ExtResource( 13 )

[node name="end turn" type="Sprite" parent="."]

transform/pos = Vector2( 66.92, 61.1368 )
texture = ExtResource( 14 )

[node name="RichTextLabel" type="Label" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 357.0
margin/right = 91.0
margin/bottom = 397.0
text = "actions"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


